--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,10 @@ a {
     background: black;
   }
 }
+
+/* @media screen and (max-width: 768) {
+  body {
+    width: 100%;
+    position: absolute;
+  }
+} */
