--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: black;
   color: white;
+  position: relative;
 }
 
 a {
@@ -24,5 +25,11 @@ a {
   body {
     color: white;
     background: black;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body{
+    position: absolute;
   }
 }
